# monlo21projet

./: .gitignore  CMakeLists.txt  GameMoveVerification.cpp  GameMoveVerification.h  aiplayer.cpp  aiplayer.h  card.cpp  card.h  cardpyramid.cpp  cardpyramid.h  coin.cpp  coin.h  coinbag.cpp  coinbag.h  coinboard.cpp  coinboard.h  controller.cpp  controller.h  deprecated.cpp  game.cpp  game.h  gamesaver.cpp  gamesaver.h  main.cpp  pile.cpp  pile.h  player.cpp  player.h  statsaver.cpp  statsaver.h  winconditions.h
SpleendorDuel_Interface/: CMakeLists.txt  CMakeLists.txt.user.451714b  CMakeLists.txt.user.5021bc1  cardPyramidView.cpp  cardPyramidView.h  coinBagView.cpp  coinBagView.h  coinBoardView.cpp  coinBoardView.h  gameView.cpp  gameView.h  main.cpp  menuView.cpp  menuView.h  privilegesView.cpp  privilegesView.h  useprivilegebuttonView.cpp  useprivilegebuttonView.h
SpleendorDuel_Interface/main/: GameMoveVerification.cpp  GameMoveVerification.h  card.cpp  card.h  coin.cpp  coin.h  coinbag.cpp  coinbag.h  controller.cpp  controller.h  deprecated.cpp  game.cpp  game.h  gamesaver.h  main.cpp  pile.cpp  player.cpp  player.h  playerview.cpp  playerview.h  statsaver.cpp  winconditions.cpp  winconditions.h
build-SpleendorDuel_Interface-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  .ninja_log.restat  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-SpleendorDuel_Interface-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
jsonFiles/: ongoingGame.json  pile1.json  pile2.json  pile3.json  royalpile.json  stats.json
(+109 files in other folders)
